Upgrade to Spring Boot 3.2.12 (Phase 1)
Major changes:
- Migrate javax.* to jakarta.* namespace (JPA, validation, annotation, JAXB)
- Update Spring Boot from 2.7.4 to 3.2.12
- Update repositories from PagingAndSortingRepository to JpaRepository
- Replace maven-jaxb2-plugin with Jakarta-compatible jaxb2-maven-plugin 3.2.0
- Add jakarta.xml.bind-api and jaxb-runtime dependencies

Dependency updates:
- Lombok: 1.18.34 -> 1.18.42
- JUnit: 5.7.2 -> 5.10.2
- Testcontainers: 1.17.6 -> 1.19.3
- Exclude ANTLR 4.8-1 from JGraphT (conflicts with Spring Data JPA)
- Remove mockito-inline (built into mockito-core 5.x)

Query fixes for Hibernate 6:
- Convert text block queries to string concatenation where needed
- Remove LOWER() from LOB field queries (Hibernate 6 compatibility)

Application starts successfully. Some integration tests need further work.

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>